--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/java,gradle,intellij,visualstudio
-# Edit at https://www.gitignore.io/?templates=java,gradle,intellij,visualstudio
+# Created by https://www.gitignore.io/api/java,gradle,intellij,visualstudio,macos
+# Edit at https://www.gitignore.io/?templates=java,gradle,intellij,visualstudio,macos
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -486,6 +486,38 @@ MigrationBackup/
 
 # End of https://www.gitignore.io/api/java,gradle,intellij,visualstudio
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 ### Custom entries ###
 .idea/
