Adjusted build.gradle to compile to target java 8 but tests with java 21

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'maven-publish'
 }
 
+def targetJvmVersion = JavaLanguageVersion.of(8);
+def targetTestJvmVersion = JavaLanguageVersion.of(21);
 repositories {
     mavenCentral()
 }
@@ -10,6 +12,20 @@ repositories {
 dependencies {
     implementation 'org.slf4j:slf4j-log4j12:1.7.25'
     testImplementation 'junit:junit:4.12'
+java {
+    toolchain {
+        languageVersion = targetJvmVersion
+    }
+}
+compileTestJava {
+    javaCompiler.set(javaToolchains.compilerFor {
+        languageVersion.set(targetTestJvmVersion)
+    })
+}
+test {
+    javaLauncher.set(javaToolchains.launcherFor {
+        languageVersion.set(targetTestJvmVersion)
+    })
 }
 
 jar {
