--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,24 @@ plugins {
 
 def targetJvmVersion = JavaLanguageVersion.of(8);
 def targetTestJvmVersion = JavaLanguageVersion.of(21);
+
+ext {
+    slf4jVersion = '2.0.16'
+    junitVersion = '5.11.3'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-log4j12:1.7.25'
-    testImplementation 'junit:junit:4.12'
+    api "org.slf4j:slf4j-api:$slf4jVersion"
+    testImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+}
+
 java {
     toolchain {
         languageVersion = targetJvmVersion
@@ -26,6 +37,10 @@ test {
     javaLauncher.set(javaToolchains.launcherFor {
         languageVersion.set(targetTestJvmVersion)
     })
+    testLogging {
+        events "FAILED"
+    }
+    useJUnitPlatform()
 }
 
 jar {
