Added build, test, deploy workflows and adjusted build.gradle to use GITHUB_TOKEN

--- a/build.gradle
+++ b/build.gradle
@@ -56,8 +56,8 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/FlorianDe/jextensions")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
-                password = project.findProperty("gpr.key") ?: System.getenv("GPR_API_KEY")
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
